swagger untuk kendaraan
